--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/mi-portafolio-angular",
-            "baseHref": "/mi-portafolio-angular/",
+            "baseHref": "mi-portafolio-angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
